# AIMasterClass_CIONET_how_is_the_model_created

./: .gitignore  EDA - all train data analysis.ipynb  README.md  aimaster_model_lifecycle.ipynb  compare.txt  config.py  evaluate.py  main.py  model_lifecycle.ipynb  models_config.py  pyproject.toml  tutorial_run.ipynb
data/: generator.py
mlops/: app.py  experiment.py  experiment_service.py  model_interface.py  pipeline.py  prompt_engineering.py  result_store.py  runner.py  splitting.py
model_configs/: bert-base.json  bert-micro-base.json  bert-micro-long.json  bielik-1.5B.json  finbert.json  gemma-3-1b-it-q.json  gemma-3-1b-it.json  prompt-gemma-3-1b-it.json  prompt-gemma-fewshot-3-1b-it.json  prompt-gemma-fewshot-v2-3-1b-it.json  prompt-gemma-zeroshot-3-1b-it.json  roberta-base-3.json  roberta-base-long.json  roberta-base.json  svm-base.json  svm-opt.json
models/gemma/: model.py
models/gemma_gguf/: model.py
models/prompt_gemma/: model.py
models/roberta/: model.py  pipeline.py
models/svm/: model.py
src/: app.py  experiment_service.py  generate_CV_splits.py  model_interface.py  result_store.py  runner.py
tests/: test_experiment.py
tests/test_exp/exp001/: train.csv  val.csv
