[project]
name = "ai-masterclass-cionet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kaggle>=1.7.4.5",
    "kagglehub>=0.3.13",
    "notebook>=7.4.5",
    "peft>=0.17.1",
    "scikit-learn>=1.7.2",
    "tensorflow==2.19.0",
    "tf-keras>=2.19.0",
    "transformers>=4.56.2",
    "trl>=0.23.0",
    "typer>=0.19.2",
    "loguru>=0.7.2",
    "numpy>=1.26.0",
    "pydantic>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
]

[project.scripts]
cv_splits = "generate_CV_splits:app"